<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="phoneAppLabel" product="default">Phone</string>
    <string name="emergencyDialerIconLabel">Emergency Dialer</string>
    <string name="phoneIconLabel">Phone</string>
    <string name="fdnListLabel">FDN list</string>
    <string name="unknown">Unknown</string>
    <string name="private_num">Private number</string>
    <string name="payphone">Pay phone</string>
    <string name="onHold">On hold</string>
    <string name="ongoing">Current call</string>
    <string name="callFailed_userBusy">Line busy</string>
    <string name="callFailed_congestion">Network busy</string>
    <string name="callFailed_timedOut">No response, timed out</string>
    <string name="callFailed_server_unreachable">Server unreachable</string>
    <string name="callFailed_number_unreachable">Number unreachable</string>
    <string name="callFailed_invalid_credentials">Incorrect username or password</string>
    <string name="callFailed_out_of_network">Called from out of network</string>
    <string name="callFailed_server_error">Server error. Try again later.</string>
    <string name="callFailed_noSignal">No signal</string>
    <string name="callFailed_limitExceeded">ACM limit exceeded</string>
    <string name="callFailed_powerOff">Radio off</string>
    <string name="callFailed_simError">No SIM, or SIM error</string>
    <string name="callFailed_outOfService">Out of service area</string>
    <string name="callFailed_fdn_only">Outgoing calls are restricted by FDN.</string>
    <string name="callFailed_cb_enabled">You cannot make outgoing calls while call barring is on.</string>
    <string name="callFailed_dialToUssd">DIAL request modified to USSD request.</string>
    <string name="callFailed_dialToSs">DIAL request modified to SS request.</string>
    <string name="callFailed_dialToDial">DIAL request modified to DIAL with different number.</string>
    <string name="callFailed_dsac_restricted">All calls are restricted by access control.</string>
    <string name="callFailed_dsac_restricted_emergency">Emergency calls are restricted by access control.</string>
    <string name="callFailed_dsac_restricted_normal">Normal calls are restricted by access control.</string>
    <string name="callFailed_cdma_lockedUntilPowerCycle">CDMA: Phone locked until power cycle.</string>
    <string name="callFailed_cdma_drop">CDMA: Call dropped.</string>
    <string name="callFailed_cdma_intercept">CDMA: Call intercepted.</string>
    <string name="callFailed_cdma_reorder">CDMA: reorder.</string>
    <string name="callFailed_cdma_SO_reject">CDMA: Service Option Reject.</string>
    <string name="callFailed_cdma_retryOrder">CDMA: retry order.</string>
    <string name="callFailed_cdma_accessFailure">CDMA: Access unsuccessful.</string>
    <string name="callFailed_cdma_preempted">CDMA: Preempted.</string>
    <string name="callFailed_cdma_notEmergency">Only Emergency calls are possible.</string>
    <string name="callFailed_unobtainable_number">Invalid Number</string>
    <string name="confCall">Conference call</string>
    <string name="call_lost">Call has been lost.</string>
    <string name="callUnanswered_forwarded">Call Unanswered and Forwarded</string>
    <string name="retry">Retry</string>
    <string name="call_lost_title">Call Lost</string>
    <string name="ok">OK</string>
    <string name="mmiStarted">MMI code started</string>
    <string name="ussdRunning">USSD code running\u2026</string>
    <string name="mmiCancelled">MMI code canceled</string>
    <string name="cancel">Cancel</string>
    <string name="manageConferenceLabel">Manage conference call</string>
    <string name="audio_mode_speaker">Speaker</string>
    <string name="audio_mode_earpiece">Handset earpiece</string>
    <string name="audio_mode_wired_headset">Wired headset</string>
    <string name="audio_mode_bluetooth">Bluetooth</string>
    <string name="wait_prompt_str">Send the following tones?\n</string>
    <string name="pause_prompt_str">Sending Tones\n</string>
    <string name="send_button">Send</string>
    <string name="pause_prompt_yes">Yes</string>
    <string name="pause_prompt_no">No</string>
    <string name="wild_prompt_str">Replace the wild character with</string>
    <string name="no_vm_number">Missing voicemail number</string>
    <string name="no_vm_number_msg">No voicemail number is stored on the SIM card.</string>
    <string name="add_vm_number_str">Add number</string>
    <string name="dialer_emptyListWorking">Loading\u2026</string>
    <string name="enterPin">Type PIN code to unlock SIM card.</string>
    <string name="pinUnlocked">SIM unlocked</string>
    <string name="enterNewPin">New SIM PIN code</string>
    <string name="verifyNewPin">Type new SIM PIN code again to confirm</string>
    <string name="verifyFailed">The SIM PINs you typed do not match. Please try again.</string>
    <string name="enterPuk">Type PUK code to unlock SIM card</string>
    <string name="badPuk">Incorrect PUK code!</string>
    <string name="buttonTxtContinue">Continue</string>
    <string name="puk_unlocked">Your SIM card has been unblocked. Your phone is unlocking\u2026</string>
    <string name="label_ndp">SIM network unlock PIN</string>
    <string name="label_nsdp">SIM network subset unlock PIN</string>
    <string name="label_cdp">SIM corporate unlock PIN</string>
    <string name="label_spdp">SIM service provider unlock PIN</string>
    <string name="label_sdp">SIM SIM unlock PIN</string>
    <string name="label_rn1dp">RUIM network1 unlock PIN</string>
    <string name="label_rn2dp">RUIM network2 unlock PIN</string>
    <string name="label_rhrpd">RUIM hrpd unlock PIN</string>
    <string name="label_rcdp">RUIM corporate unlock PIN</string>
    <string name="label_rspdp">RUIM service provider unlock PIN</string>
    <string name="label_rdp">RUIM RUIM unlock PIN</string>
    <string name="sim_ndp_unlock_text">Unlock</string>
    <string name="sim_ndp_dismiss_text">Dismiss</string>
    <string name="requesting_unlock" msgid="6412629401033249351">"Requesting network unlock…"</string>
    <string name="unlock_failed" msgid="6490531697031504225">"Network unlock request unsuccessful."</string>
    <string name="unlock_success" msgid="6770085622238180152">"Network unlock successful."</string>
    <string name="requesting_nw_unlock">Requesting SIM network unlock\u2026</string>
    <string name="requesting_nw_subset_unlock">Requesting SIM network subset unlock\u2026</string>
    <string name="requesting_sp_unlock">Requesting SIM service provider unlock\u2026</string>
    <string name="requesting_corporate_unlock">Requesting SIM corporate unlock\u2026</string>
    <string name="requesting_sim_unlock">Requesting SIM SIM unlock\u2026</string>
    <string name="requesting_rnw1_unlock">Requesting RUIM network1 unlock\u2026</string>
    <string name="requesting_rnw2_unlock">Requesting RUIM network2 unlock\u2026</string>
    <string name="requesting_rhrpd_unlock">Requesting RUIM hrpd unlock\u2026</string>
    <string name="requesting_rsp_unlock">Requesting RUIM service provider unlock\u2026</string>
    <string name="requesting_rc_unlock">Requesting RUIM corporate unlock\u2026</string>
    <string name="requesting_ruim_unlock">Requesting RUIM RUIM unlock\u2026</string>
    <string name="nw_unlock_failed">SIM Network unlock request unsuccessful.</string>
    <string name="nw_subset_unlock_failed">SIM Network Subset unlock request unsuccessful.</string>
    <string name="sp_unlock_failed">SIM Service Provider unlock request unsuccessful.</string>
    <string name="corporate_unlock_failed">SIM Corporate unlock request unsuccessful.</string>
    <string name="sim_unlock_failed">SIM SIM unlock request unsuccessful.</string>
    <string name="rnw1_unlock_failed">RUIM Network1 unlock request unsuccessful.</string>
    <string name="rnw2_unlock_failed">RUIM Network2 unlock request unsuccessful.</string>
    <string name="rhrpd_unlock_failed">RUIM Hrpd unlock request unsuccessful.</string>
    <string name="call_settings">Call settings</string>
    <string name="additional_gsm_call_settings">Additional settings</string>
    <string name="tty_mode_option_title">TTY mode</string>
    <string name="tty_mode_option_summary">Set TTY mode</string>
    <string name="auto_retry_mode_title">Auto Retry</string>
    <string name="auto_retry_mode_summary">Enable Auto Retry mode</string>
    <string name="proximity_mode_title">Turn on proximity sensor</string>
    <string name="proximity_on_summary">When you answer a call, the screen will be turned off to save power.</string>
    <string name="reversal_mode_title">Incoming to mute by reversal</string>
    <string name="reversal_on_summary">open the reversal mute</string>
    <string name="display_home_location_settings">Display Home Location</string>
    <string name="enable_display_home_location">display home location is enabled</string>
    <string name="disable_display_home_location">display home location is disabled</string>
    <string name="hac_mode_title">Hearing aids</string>
    <string name="hac_mode_summary">Turn on hearing aid compatibility</string>
    <string name="dtmf_tones_title">DTMF Tones</string>
    <string name="dtmf_tones_summary">Set the length of DTMF tones</string>
    <string name="xdivert_title">X-Divert</string>
    <string name="xdivert_summary">CFNRc Settings</string>
    <string name="sip_settings">Internet call settings</string>
    <string name="sip_accounts_title">Accounts</string>
    <string name="sip_call_options_title">Use Internet calling</string>
    <string name="sip_call_options_wifi_only_title">Use Internet calling (Wi-Fi only)</string>
    <string name="description_image_button_one">one</string>
    <string name="description_image_button_two">two</string>
    <string name="description_image_button_three">three</string>
    <string name="description_image_button_four">four</string>
    <string name="description_image_button_five">five</string>
    <string name="description_image_button_six">six</string>
    <string name="description_image_button_seven">seven</string>
    <string name="description_image_button_eight">eight</string>
    <string name="description_image_button_nine">nine</string>
    <string name="description_image_button_star">star</string>
    <string name="description_image_button_zero">zero</string>
    <string name="description_image_button_pound">pound</string>
    <string name="ipcall_sub_title">IP call setting</string>
    <string name="ipcall_sub_summery">Edit the IP prefix for IP call</string>
    <string name="speed_dial_setting">Speed dial settings</string>
    <string name="CFActivate">Activate</string>
    <string name="CFDeactivate">Deactivate</string>
    <string name="endscreen_refresh_contacts">"Refresh"</string>
    <string name="endscreen_addContacts">"Add Contacts"</string>
    <string name="endscreen_call_c">"Call C"</string>
    <string name="endscreen_call_g">"Call G"</string>
    <string name="endscreen_message">"Message"</string>
    <string name="call_black">Incoming Black number</string>
    <string name="call_black_set">set black number and filter incoming call automatically</string>
    <string name="phone_type_c">"China Telecom"</string>
    <string name="call_setting_common_use">Common set</string>
    <string name="call_setting_CDMA">CDMA call set</string>
    <string name="call_setting_GSM">GSM call set</string>
    <string name="call_setting_sim_enable">SIM turn on</string>
    <string name="call_setting_reject_sms_title">set reject sms</string>
    <string name="call_setting_reject_sms_summary"></string>
    <string name="call_setting_dtmf_tone_enable_title" >Dialpad dtmf tone</string>
    <string name="call_setting_hook_hint_enable_title" >Dail vibrate hint</string>
    <string name="call_setting_call_forward_title" >Call forward</string>
    <string name="call_setting_call_wait_title" >Call wait</string>
</resources>