<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2008 The Android Open Source Project
     Copyright (c) 2010-2012, Code Aurora Forum. All rights reserved.
     Copyright (c) 2012, Ahong. All rights reserved

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<!-- Begin: Modified by sunrise for CallSet 2012/08/06 -->
<!-- <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:phone="http://schemas.android.com/apk/res/com.android.phone"
        android:title="@string/call_settings"> -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:phone="http://schemas.android.com/apk/res/com.android.phone"
        android:title="@string/call_settings"
        android:key="settingsScreen">

    <!-- Part1: common use set -->
    <PreferenceCategory android:key="button_common_category_key"
        android:title="@string/call_setting_common_use"
        android:persistent="false" />

    <PreferenceScreen
        android:key="button_respond_via_sms_key"
        android:title="@string/call_setting_reject_sms_title"
        android:summary="@string/call_setting_reject_sms_summary"
        android:persistent="false">

        <intent android:action="android.intent.action.MAIN"
            android:targetPackage="com.android.phone"
            android:targetClass="com.android.phone.RespondViaSmsManager$Settings" />
    </PreferenceScreen>

    <PreferenceScreen
        android:key="speed_dial_settings"
        android:title="@string/speed_dial_setting"
        android:persistent="false">
        <intent android:action="android.intent.action.MAIN"
            android:targetPackage="com.android.contacts"
            android:targetClass="com.android.contacts.SpeedDialListActivity"/>
    </PreferenceScreen>

    <PreferenceScreen
        android:key="button_call_black_key"
        android:title="@string/call_black"
        android:summary="@string/call_black_set"
        android:persistent="false">

        <intent android:action="android.intent.action.MAIN"
            android:targetPackage="com.ahong.blackcall"
            android:targetClass="com.ahong.blackcall.AhongBlackActivity" />

    </PreferenceScreen>

    <CheckBoxPreference
            android:key="button_dtmf_tone_key"
            android:title="@string/call_setting_dtmf_tone_enable_title"
            android:defaultValue="true" />

    <CheckBoxPreference
            android:key="button_hook_vibrate_hint_key"
            android:title="@string/call_setting_hook_hint_enable_title"
            android:defaultValue="true" />

    <CheckBoxPreference
        android:key="button_reversalmute_key"
        android:title="@string/reversal_mode_title"
        android:summary="@string/reversal_on_summary"
        android:defaultValue="false"/>

    <CheckBoxPreference
        android:key="button_proximity_key"
        android:title="@string/proximity_mode_title"
        android:persistent="false"
        android:summary="@string/proximity_on_summary"/>

    <!-- sip category begin-->
    <PreferenceCategory
        android:key="sip_settings_category_key"
        android:title="@string/sip_settings"
        android:persistent="false">

        <PreferenceScreen
            android:key="sip_account_settings_key"
            android:title="@string/sip_accounts_title"
            android:persistent="false">

           <intent android:action="android.intent.action.MAIN"
                android:targetPackage="com.android.phone"
                android:targetClass="com.android.phone.sip.SipSettings" />
        </PreferenceScreen>

        <ListPreference
            android:key="sip_call_options_key"
            android:title="@string/sip_call_options_title"
            android:persistent="true"
            android:entries="@array/sip_call_options_entries"
            android:entryValues="@array/sip_call_options_values"/>

        <ListPreference
            android:key="sip_call_options_wifi_only_key"
            android:title="@string/sip_call_options_title"
            android:dialogTitle="@string/sip_call_options_wifi_only_title"
            android:persistent="true"
            android:entries="@array/sip_call_options_wifi_only_entries"
            android:entryValues="@array/sip_call_options_values"/>
    </PreferenceCategory>
    <!-- sip category end-->

    <!-- Part2: CDMA set -->
    <PreferenceCategory android:key="button_cdma_category_key"
        android:title="@string/call_setting_CDMA"
        android:persistent="false" />

        <CheckBoxPreference
            android:key="button_cdma_is_enable_key"
            android:title="@string/phone_type_c"
            android:summary="@string/call_setting_sim_enable"
            android:defaultValue="true"/>
        <PreferenceScreen
           android:key="button_cdma_ipprefix_key"
           android:title="@string/ipcall_sub_title"
           android:summary="@string/ipcall_sub_summery"
           android:persistent="false">
        </PreferenceScreen>

        <PreferenceScreen
            android:key="button_cdma_cf_expand_key"
            android:title="@string/call_setting_call_forward_title"
            android:persistent="false">

            <intent android:action="android.intent.action.MAIN"
                android:targetPackage="com.android.phone"
                android:targetClass="com.android.phone.CdmaCallForwardOptions"/>
        </PreferenceScreen>

        <PreferenceScreen
            android:key="button_cdma_cw_key"
            android:title="@string/call_setting_call_wait_title"
            android:persistent="false">
            <!-- ren_kang.hoperun 2012.6.20 add for callwaiting -->
            <intent android:action="android.intent.action.MAIN"
                android:targetPackage="com.android.phone"
                android:targetClass="com.android.phone.CdmaCallWaitingOptions"/>
            <PreferenceScreen
                android:key="button_cw_act_key"
                android:title="@string/CFActivate">
                <intent
                    android:action="android.intent.action.CALL_PRIVILEGED"
                    android:targetPackage="com.android.phone"
                    android:targetClass="com.android.phone.OutgoingCallBroadcaster" />
            </PreferenceScreen>
            <PreferenceScreen
                android:key="button_cw_deact_key"
                android:title="@string/CFDeactivate">
                <intent
                    android:action="android.intent.action.CALL_PRIVILEGED"
                    android:targetPackage="com.android.phone"
                    android:targetClass="com.android.phone.OutgoingCallBroadcaster" />
            </PreferenceScreen>
            <!-- ren_kang.hoperun END -->
        </PreferenceScreen>
   <!--  </PreferenceCategory> -->

    <!-- Part 3: GSM set -->
    <PreferenceCategory android:key="button_gsm_category_key"
        android:title="@string/call_setting_GSM"
        android:persistent="false" >

        <CheckBoxPreference
            android:key="button_gsm_is_enable_key"
            android:title="@string/call_setting_GSM"
            android:summary="@string/call_setting_sim_enable"
            android:defaultValue="true"/>
        <PreferenceScreen
           android:key="button_gsm_ipprefix_key"
           android:title="@string/ipcall_sub_title"
           android:summary="@string/ipcall_sub_summery"
           android:persistent="false">
        </PreferenceScreen>

         <PreferenceScreen
            android:key="button_gsm_cf_expand_key"
            android:title="@string/call_setting_call_forward_title"
            android:persistent="false">

            <intent android:action="android.intent.action.MAIN"
                android:targetPackage="com.android.phone"
                android:targetClass="com.android.phone.GsmUmtsCallForwardOptions"/>
        </PreferenceScreen>

        <PreferenceScreen
            android:key="button_gsm_more_expand_key"
            android:title="@string/additional_gsm_call_settings"
            android:persistent="false">

            <intent android:action="android.intent.action.MAIN"
                android:targetPackage="com.android.phone"
                android:targetClass="com.android.phone.GsmUmtsAdditionalCallOptions"/>
        </PreferenceScreen>
    </PreferenceCategory>

    <!-- Part4: other set -->
    <!--
    <PreferenceCategory android:key="button_misc_category_key"
        android:title="@string/other_settings"
        android:persistent="false" />
    -->

        <CheckBoxPreference
            android:key="button_auto_retry_key"
            android:title="@string/auto_retry_mode_title"
            android:persistent="false"
            android:summary="@string/auto_retry_mode_summary"/>


        <ListPreference
            android:key="button_tty_mode_key"
            android:title="@string/tty_mode_option_title"
            android:summary="@string/tty_mode_option_summary"
            android:persistent="false"
            android:entries="@array/tty_mode_entries"
            android:entryValues="@array/tty_mode_values"/>

         <CheckBoxPreference
            android:key="button_hac_key"
            android:title="@string/hac_mode_title"
            android:persistent="true"
            android:summary="@string/hac_mode_summary"/>

        <ListPreference
            android:key="button_dtmf_settings"
            android:title="@string/dtmf_tones_title"
            android:summary="@string/dtmf_tones_summary"
            android:entries="@array/dtmf_tone_entries"
            android:entryValues="@array/dtmf_tone_values"/>

        <CheckBoxPreference
            android:key="display_home_location_key"
            android:title="@string/display_home_location_settings"
            android:summaryOn="@string/enable_display_home_location"
            android:summaryOff="@string/disable_display_home_location"
            android:persistent="false">
        </CheckBoxPreference>

        <PreferenceScreen
            android:key="button_xdivert"
            android:title="@string/xdivert_title"
            android:summary="@string/xdivert_summary"
            android:persistent="false">
        </PreferenceScreen>

</PreferenceScreen>
<!-- End: Modified by sunrise for CallSet 2012/08/06 -->
