<?xml version="1.0" encoding="UTF-8"?>
<!--Begin: Modified by zxiaona for call_screen 2012-4-1 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/callEnd"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
<!-- Buttons  of the call_end onscreen for keep the newContacts or refresh the store. -->
   <LinearLayout
     android:id="@+id/callingInformation"
     android:layout_width="fill_parent"
     android:layout_height="44dp"
     android:layout_above="@+id/buttons"
     android:layout_alignParentBottom="true"
     android:layout_marginBottom="120dip"
     android:orientation="horizontal"
     android:visibility="visible"
     >

     <Button
         android:id="@+id/editNewContact"
         style="@style/call_over_textview"
         android:layout_gravity="left"
         android:layout_marginLeft="12dip"
         android:layout_weight="1"
         android:background="@drawable/btn_bg"
         android:text="@string/endscreen_addContacts"
         />

     <View
         android:id="@+id/view1"
         android:layout_width="10dp"
         android:layout_height="wrap_content"
         android:layout_weight="1" />

     <Button
         android:id="@+id/refresh"
         style="@style/call_over_textview"
         android:layout_gravity="right"
         android:layout_marginRight="12dip"
         android:layout_weight="1"
         android:background="@drawable/btn_bg"
         android:text="@string/endscreen_refresh_contacts"

         />
    </LinearLayout>
  <!-- Buttons  of the call_end onscreen for calling secondary or send the message to the calling_Contacts. -->
    <RelativeLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingBottom="12dip"
        >
        <Button
            android:id="@+id/g_callButton"
            style="@style/call_over_buttons"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/call_btn_bg"
            android:drawableTop="@drawable/call_g"
            android:text="@string/endscreen_call_g"
            />

        <Button
            android:id="@+id/c_callButton"
            style="@style/call_over_buttons"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="12dip"
            android:background="@drawable/call_btn_bg"
            android:drawableTop="@drawable/call_c"
            android:text="@string/endscreen_call_c"
            />

        <Button
            android:id="@+id/smsButton"
            style="@style/call_over_buttons"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="12dip"
            android:background="@drawable/message_btn_bg"
            android:drawableTop="@drawable/messageicon002"
            android:text="@string/endscreen_message"
            />
    </RelativeLayout>
</RelativeLayout>
<!--End: Modified by zxiaona for call_screen 2012-4-1 -->